--- a/aws-auth-patch.yml
+++ b/aws-auth-patch.yml
@@ -8,7 +8,7 @@ data:
       username: system:node:{{EC2PrivateDNSName}}
     - groups:
       - system:masters
-      rolearn: arn:aws:iam::<ACCOUNT_ID>:role/UdacityFlaskDeployCBKubectlRole
+      rolearn: arn:aws:iam::294148910752:role/UdacityFlaskDeployCBKubectlRole
       username: build   
 kind: ConfigMap
 metadata:
