--- a/aws-auth-patch.yml
+++ b/aws-auth-patch.yml
@@ -1,19 +1,13 @@
 apiVersion: v1
 data:
-  mapRoles: |
-    - groups:
-      - system:bootstrappers
-      - system:nodes
-      rolearn: arn:aws:iam::294148910752:role/eksctl-simple-jwt-api-nodegroup-n-NodeInstanceRole-3TKVWRI1H7UG
-      username: system:node:{{EC2PrivateDNSName}}
-    - groups:
-      - system:masters
-      rolearn: arn:aws:iam::294148910752:role/UdacityFlaskDeployCBKubectlRole
-      username: build   
+  mapRoles: "- groups:\n  - system:bootstrappers\n  - system:nodes\n  rolearn: arn:aws:iam::294148910752:role/eksctl-simple-jwt-api-nodegroup-n-NodeInstanceRole-3TKVWRI1H7UG\n
+    \ username: system:node:{{EC2PrivateDNSName}}\n- groups:\n  - system:masters\n
+    \ rolearn: arn:aws:iam::294148910752:role/UdacityFlaskDeployCBKubectlRole\n  username:
+    build   \n"
 kind: ConfigMap
 metadata:
   creationTimestamp: "2023-05-13T11:34:26Z"
   name: aws-auth
   namespace: kube-system
-  resourceVersion: "1807"
+  resourceVersion: "3744"
   uid: aefc936f-ffa5-49d8-8da7-4b9d6985a063
